--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -57,6 +57,8 @@
 
 .nav-item:hover {
   border-bottom: 2px solid#f00946;
+  transform: scale(1.1);
+  transition: all 0.3s ease;
 }
 
 .nav-links {
