--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -19,7 +19,7 @@
 
 .btn--outline {
   background-color: transparent;
-  color: #fff;
+  color: #f00946;
   padding: 8px 20px;
   border: 1px solid var(--primary);
   transition: all 0.3s ease-out;
