--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -29,7 +29,22 @@
   max-width: 540px;
   padding-top: 0;
   padding-bottom: 60px;
+  z-index: 1;
+  position: relative;
 }
+/* .background-wrapper {
+  z-index: 0;
+  position: relative;
+}
+.background-icon {
+  color: whitesmoke;
+  width: 300px;
+  height: auto;
+  z-index: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+} */
 
 .heading {
   margin-bottom: 24px;
