--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -29,8 +29,8 @@
   max-width: 540px;
   padding-top: 0;
   padding-bottom: 60px;
-  z-index: 1;
-  position: relative;
+  /* z-index: 1;
+  position: relative; */
 }
 /* .background-wrapper {
   z-index: 0;
@@ -48,7 +48,7 @@
 
 .heading {
   margin-bottom: 24px;
-  font-size: 32px;
+  font-size: 48px;
   line-height: 1.1;
   font-weight: 600;
   color: #f7f8fa;
@@ -70,11 +70,11 @@
 }
 
 .home__hero-img-wrapper {
-  max-width: 385px;
+  max-width: 555px;
 }
 
 .home__hero-img {
-  max-width: 90%;
+  max-width: 95%;
   margin-top: 0;
   margin-right: 0;
   margin-left: 10px;
