--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -130,9 +130,9 @@
 
   .navbar-logo {
     position: absolute;
-    top: 0;
-    left: 0;
-    transform: translate(25%, 50%);
+    top: 20px;
+    left: 20;
+    /* transform: translate(25%, 50%); */
   }
 
   .menu-icon {
