--- a/src/components/Pages/MyProjects/ProjectCard6/ProjectCard6.css
+++ b/src/components/Pages/MyProjects/ProjectCard6/ProjectCard6.css
@@ -9,8 +9,8 @@
 .pricing__container-card {
   background: whitesmoke;
   box-shadow: 0 6px 20px rgba(56, 125, 255, 0.2);
-  width: 280px;
-  height: 400px;
+  width: 300px;
+  height: 300px;
   text-decoration: none;
   border-radius: 8px;
 }
@@ -49,6 +49,7 @@
   flex-direction: column;
   align-items: start;
   margin: 0 auto;
+  margin-bottom: 1rem;
 }
 
 .pricing__heading {
