--- a/src/components/Pages/MyProjects/ProjectCard6/ProjectCard6.css
+++ b/src/components/Pages/MyProjects/ProjectCard6/ProjectCard6.css
@@ -1,5 +1,5 @@
 .pricing__section {
-  padding: 100px 0 160px;
+  padding: 10px 0 1rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
