--- a/src/components/MainHeader/MainHeader.css
+++ b/src/components/MainHeader/MainHeader.css
@@ -1,170 +1,107 @@
-.pricing__section {
-  padding: 10px 0 1rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  background: #fafafa;
-}
-
-.pricing__container-card {
-  background: whitesmoke;
-  box-shadow: 0 6px 20px rgba(56, 125, 255, 0.2);
-  width: 300px;
-  height: 300px;
-  text-decoration: none;
-  border-radius: 8px;
-}
-.pricing__container-card-horizontal {
-  background: whitesmoke;
-  box-shadow: 0 6px 20px rgba(56, 125, 255, 0.2);
-  width: 500;
-  height: 280;
-  text-decoration: none;
-  border-radius: 4px;
-}
-
-.pricing__container-card:nth-child(2) {
-  transform: scale(1.05);
-  background: black;
-}
-
-.pricing__container-card:hover {
-  transform: scale(1.06);
-  transition: all 0.3s ease-out;
-  border: 2px solid#f00946;
-}
-
-.pricing__container-card:nth-child(2) {
-  margin: 0 24px;
-}
-
-.pricing__container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.pricing__wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  margin: 0 auto;
-  margin-bottom: 1rem;
-}
-
-.pricing__heading {
-  color: #1c2237;
-  margin-bottom: 24px;
-}
-
-.pricing__container-cardInfo {
-  display: flex;
-  flex-direction: column;
-  height: 500px;
-  padding: 24px;
-  align-items: center;
+.home__hero-section {
   color: #fff;
-}
-.pricing__container-cardInfo-dark {
-  display: flex;
-  flex-direction: column;
-  height: 500px;
-  padding: 24px;
-  align-items: center;
-  color: black;
-}
-/* TEXT IN MY PROJECTS*/
-.pricing__container-cardInfo h3 {
-  margin-bottom: 5px;
-  font-size: 24px;
-  color: black;
-}
-.pricing__container-cardInfo-dark h3 {
-  margin-bottom: 5px;
-  font-size: 24px;
-  color: white;
+  padding: 10px 0;
 }
 
-.pricing__container-cardInfo h4 {
-  font-size: 40px;
-  color: black;
-}
-.pricing__container-cardInfo-dark h4 {
-  font-size: 40px;
-  color: white;
-}
-
-.pricing__container-cardInfo p {
-  font-size: 14px;
-  margin-bottom: 24px;
-  color: black;
-}
-.pricing__container-cardInfo-dark p {
-  font-size: 14px;
-  margin-bottom: 24px;
-  color: white;
-}
-
-.pricing__container-features {
-  margin: 16px 0 32px;
-  list-style: none;
-}
-.pricing__container-features-dark {
-  margin: 16px 0 32px;
-  list-style: none;
-}
-
-.pricing__container-features li {
-  margin-bottom: 10px;
-  color: black;
-}
-.pricing__container-features-dark li {
-  margin-bottom: 10px;
-  color: white;
-}
-
-.pricing__container-features {
-  display: flex;
-  flex-direction: column;
+.home__hero-row {
   align-items: center;
 }
 
-.icon-dark {
-  margin: 20px 0;
-  color: black;
+.row {
+  display: flex;
+  margin-right: -15px;
+  margin-bottom: -15px;
+  margin-left: -15px;
+  flex-wrap: wrap;
+  align-content: stretch;
 }
-.icon-light {
-  margin: 20px 0;
-  color: white;
+
+.col {
+  margin-bottom: 15px;
+  padding-right: 15px;
+  padding-left: 15px;
+  flex: 1;
+  max-width: 50%;
+  flex-basis: 50%;
 }
 
-@media screen and (max-width: 960px) {
-  .pricing__container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
+.home__hero-text-wrapper {
+  max-width: 540px;
+  padding-top: 0;
+  padding-bottom: 20px;
+  /* z-index: 1;
+    position: relative; */
+}
+/* .background-wrapper {
+    z-index: 0;
+    position: relative;
+  }
+  .background-icon {
+    color: whitesmoke;
+    width: 300px;
+    height: auto;
+    z-index: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+  } */
+
+.heading {
+  margin-bottom: 24px;
+  font-size: 48px;
+  line-height: 1.1;
+  font-weight: 600;
+  color: #f7f8fa;
+}
+
+.dark {
+  color: #1c2237;
+}
+
+.darkBg {
+  background-color: #1c2237;
+}
+
+.home__hero-subtitle {
+  max-width: 440px;
+  margin-bottom: 35px;
+  font-size: 18px;
+  line-height: 24px;
+}
+
+.home__hero-img-wrapper {
+  max-width: 455px;
+}
+
+.home__hero-img {
+  max-width: 95%;
+  margin-top: 0;
+  margin-right: 0;
+  margin-left: 10px;
+  padding-right: 0;
+}
+
+img {
+  border: 0;
+  max-width: 100%;
+  vertical-align: middle;
+  display: inline-block;
+}
+
+@media screen and (max-width: 991px) {
+  .container {
+    padding-right: 30px;
+    padding-left: 30px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .home__hero-text-wrapper {
+    padding-bottom: 10px;
   }
 
-  .pricing__container-card {
-    width: 90%;
-  }
-
-  .pricing__wrapper {
-    margin: 0 30px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .pricing__container-card:nth-child(2) {
-    transform: scale(1);
-    background: #242424;
-    margin: 24px;
-  }
-
-  .pricing__container-card:hover {
-    transform: none;
+  .col {
+    max-width: 70%;
+    flex-basis: 100%;
   }
 }
