--- a/src/components/Footer/HomeFooter/HomeFooter.css
+++ b/src/components/Footer/HomeFooter/HomeFooter.css
@@ -7,17 +7,6 @@
   align-items: center;
 }
 
-.footer-subscription {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  margin-bottom: 24px;
-  padding: 24px;
-  color: #fff;
-}
-
 .footer-subscription > p {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
@@ -44,16 +33,6 @@
   display: flex;
 }
 
-.footer-link-items {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  margin: 16px;
-  text-align: left;
-  width: 160px;
-  box-sizing: border-box;
-}
-
 .footer-link-items a:hover {
   color: #e9e9e9;
   transition: 0.3s ease-out;
@@ -62,7 +41,8 @@
 /* Social Icons */
 .social-icon-link {
   color: #fff;
-  font-size: 24px;
+  font-size: 50px;
+  align-items: center;
 }
 .social-icon-link:hover {
   border-bottom: 2px solid#f00946;
@@ -92,8 +72,7 @@
   justify-content: space-between;
   align-items: center;
   width: 240px;
-  /* horizontally */
-  /* position: absolute; */
+  height: auto;
   top: 50%;
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
